# unlearn-pii

./: .gitignore  01-single-unlearn.ipynb  AGENTS.md  README.md  dataset.py  evaluation.py  forget_templates.txt  main.py  project-log.md  project.md  pyproject.toml  retain_templates.txt  training.py
data/: forget_templates.txt  retain_templates.txt
datasets/: generate_dataset.py
findings/: findings.md
notebooks/: 01-single-unlearn.ipynb
wandb/: latest-run
wandb/run-20260702_154722-pvek46wi/files/: requirements.txt  wandb-metadata.json
wandb/run-20260702_155410-2ao7xasd/files/: wandb-metadata.json
wandb/run-20260702_170951-pwxcnrb4/: run-pwxcnrb4.wandb
wandb/run-20260702_170951-pwxcnrb4/files/: wandb-metadata.json
wandb/run-20260702_171120-m0kbzvpy/: run-m0kbzvpy.wandb
wandb/run-20260702_171120-m0kbzvpy/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260702_171416-cxxwpyec/: run-cxxwpyec.wandb
wandb/run-20260702_171416-cxxwpyec/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260702_171513-6ps1ch53/: run-6ps1ch53.wandb
wandb/run-20260702_171600-x00kjgmg/: run-x00kjgmg.wandb
wandb/run-20260702_172056-bdf6c3fg/: run-bdf6c3fg.wandb
wandb/run-20260702_172318-1qhqho51/: run-1qhqho51.wandb
wandb/run-20260702_172613-p89kjjg8/: run-p89kjjg8.wandb
wandb/run-20260702_172801-7rdrvj5t/: run-7rdrvj5t.wandb
wandb/run-20260702_173516-r491xlxu/: run-r491xlxu.wandb
wandb/run-20260702_173750-dou4r8r0/: run-dou4r8r0.wandb
wandb/run-20260702_174004-5an7qmpz/: run-5an7qmpz.wandb
(+31 files in other folders)
